examples/bad/while_error.mtch
int main() {
    int i = 0;

    while (i + 5) {
        if (i % 2 == 0) {
            i++;
        }
        else {
            i++;
        }
        print(i);
    }

    return 0;
}